Changed to a single method to get users by role